--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,16 @@
+* {
+	margin: 0;
+	padding: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+		'Droid Sans', 'Helvetica Neue', sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
 .App {
 	text-align: center;
 	display: flex;
 	flex-direction: column;
-	background-color: grey;
+	background-color: #e4dddd;
 	height: 100vh;
 	width: 100%;
 }
@@ -23,80 +31,9 @@ form input {
 
 .drag-n-drop {
 	margin-top: 20px;
-	background: grey;
+	background: transparent;
 	width: 100%;
 	display: flex;
 	flex-direction: row;
 	gap: 10px;
 }
-
-.drag-n-drop .dnd-group {
-	background-color: #61dafb;
-	border: 1px solid #000000;
-	border-radius: 5px;
-	flex: 2;
-	padding: 20px;
-	cursor: pointer;
-}
-
-.drag-n-drop .dnd-group .dnd-item {
-	margin: 10px;
-	background-color: ivory;
-	color: #000000;
-	text-align: left;
-	padding: 20px;
-	display: flex;
-	justify-content: space-between;
-}
-
-.edit-button {
-	padding: 5px;
-	cursor: pointer;
-}
-
-.edit-button:hover {
-	color: blue;
-}
-
-.delete-button {
-	padding: 5px;
-	cursor: pointer;
-}
-
-.delete-button:hover {
-	color: red;
-}
-/* .App-logo {
-	height: 40vmin;
-	pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-	.App-logo {
-		animation: App-logo-spin infinite 20s linear;
-	}
-} */
-
-.App-header {
-	background-color: #282c34;
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	font-size: calc(10px + 2vmin);
-	color: white;
-}
-
-/* .App-link {
-	color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-	from {
-		transform: rotate(0deg);
-	}
-	to {
-		transform: rotate(360deg);
-	}
-} */
