--- a/src/components/DragDivision/dragDivision.css
+++ b/src/components/DragDivision/dragDivision.css
@@ -3,6 +3,33 @@
 	border: 1px solid #000000;
 	border-radius: 5px;
 	flex: 2;
-	padding: 20px;
+	padding: 20px 20px 50px 20px;
 	cursor: pointer;
+	height: 70vh;
+}
+
+.titleSection {
+	display: flex;
+	justify-content: space-between;
+	border-bottom: 1px solid grey;
+	padding: 20px;
+}
+
+.titleSection button {
+	padding: 5px 15px 5px 15px;
+	font-size: 12px;
+	border-radius: 65px;
+}
+
+label {
+	margin-top: 10px;
+}
+
+textarea {
+	outline: none;
+	padding: 15px;
+	width: 100%;
+}
+textarea:focus {
+	border: 2px solid #000000;
 }
