--- a/src/components/DragDivision/dragDivision.css
+++ b/src/components/DragDivision/dragDivision.css
@@ -5,7 +5,8 @@
 	flex: 2;
 	padding: 20px 20px 50px 20px;
 	cursor: pointer;
-	height: 70vh;
+	min-height: 40vh;
+	height: auto;
 }
 
 .titleSection {
