--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,8 @@
 	display: flex;
 	flex-direction: column;
 	background-color: #e4dddd;
-	height: 100vh;
+	min-height: 100vh;
+	height: auto;
 	width: 100%;
 }
 
